--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/david_cafe
+jdbc.url=jdbc:mysql://localhost:3306/cafedatabase
 jdbc.username=root
-jdbc.password=root
+jdbc.password=1111
